localstorage data add

--- a/html_vanilaJS_version/index.html
+++ b/html_vanilaJS_version/index.html
@@ -185,7 +185,7 @@
 
     <div class="hidden fixed bottom-2 left-[45%] " id="checkout-btn">
         <button id="showModal" class="bg-[#ffbb5a]  text-center  rounded-full py-3 texl-xl px-7 font-semibold">Checkout
-            <span class="py-1 px-2 bg-white rounded-md text-black" id="checkout-value"></span></button>
+            <span class="py-1 px-2 ml-2 bg-white rounded-md text-black" id="checkout-value"></span></button>
     </div>
 
 
