add checkout feature

--- a/html_vanilaJS_version/index.html
+++ b/html_vanilaJS_version/index.html
@@ -87,22 +87,14 @@
                 <!-- product title -->
                 <h1 class="font-bold text-3xl">Classy Modern Smart watch</h1>
                 <!-- product rating -->
-                <!-- <div class="rating rating-md rating-half items-center ">
-                    <input type="radio" name="rating-10" class="rating-hidden" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-orange-400"
-                        checked="checked" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-1 bg-orange-400" />
-                    <input type="radio" name="rating-10" class="mask mask-star-2 mask-half-2 bg-orange-400" />
-
+                <div class="flex items-center  text-orange-400">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star-half-stroke"></i>
                     <p class="text-sm text-gray-500 ml-4">(2 Reviews)</p>
-                </div> -->
+                </div> 
                 <!-- product price -->
                 <h4 class="text-3xl text-[#6576ff] font-bold "><del
                         class="text-xl font-normal text-gray-500">$99.00</del> $79.00</h4>
