add readme file

--- a/html_vanilaJS_version/index.html
+++ b/html_vanilaJS_version/index.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="">
+<body class="relative">
 
     <!-- notification -->
     <div id="notification" class="top-4 left-[40%] hidden fixed">
@@ -23,7 +23,7 @@
 
     <!-- modal -->
     <div id="modal"
-        class="min-h-screen absolute w-full mx-auto bg-black bg-opacity-50 flex items-center justify-center z-50 hidden overflow-auto">
+        class="h-full absolute w-full mx-auto bg-black bg-opacity-50 flex items-center justify-center z-50 hidden overflow-auto">
 
         <div class="mx-auto bg-white py-8 px-4 rounded-md  border-gray-200 ">
             <header class="px-5 py-4 border-gray-100">
